--- a/package.json
+++ b/package.json
@@ -5,17 +5,20 @@
   "main": "bot.js",
   "dependencies": {
     "async": "^0.9.0",
-    "aws-sdk": "^2.1.40",
+    "bj-stream-rpc": "git://github.com/euank/bj-stream-rpc#master",
+    "eu-node-config": "git://github.com/euank/EuNodeConfig#master",
     "q": "^1.1.1",
     "slate-irc": "^0.7.3",
+    "snailescape.js": "^2.0.1",
     "underscore": "^1.7.0",
-    "winston": "^0.8.3",
-    "EuNodeConfig": "git://github.com/euank/EuNodeConfig#master",
-    "bj-stream-rpc": "git://github.com/euank/bj-stream-rpc#master"
+    "winston": "^0.8.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^3.4.1",
+    "mocha": "^2.3.4"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "",
   "license": "ISC"
